quadruped: constructed quadruped system

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,12 +23,13 @@ option(FORCE_BUILD_TESTS "Force build tests" OFF)
 option(ENABLE_LOGGING "Enable logging" ON)
 option(STATIC_CHECK "Enable static check" OFF)
 
+option(ENABLE_TBOT_APP "Enable tbot app" OFF)
+option(ENABLE_QUADRUPED_APP "Enable quadruped app" OFF)
+
 if (BUILD_AS_MODULE)
-  set(BUILD_APPS OFF)
   set(ENABLE_TARGET_DESKTOP OFF)
   message(STATUS "Disabled desktop target on module build")
 else ()
-  set(BUILD_APPS ON)
   if (CMAKE_SYSTEM_PROCESSOR MATCHES "x86_64")
     set(ENABLE_TARGET_DESKTOP ON)
   else ()
