--- a/src/utilities/logging/test/CMakeLists.txt
+++ b/src/utilities/logging/test/CMakeLists.txt
@@ -1,3 +1,6 @@
 # Add executables
 add_executable(test_logging test_logging.cpp)
 target_link_libraries(test_logging logging)
+
+add_executable(test_xlogger test_xlogger.cpp)
+target_link_libraries(test_xlogger logging)
