--- a/src/platform/quadruped/CMakeLists.txt
+++ b/src/platform/quadruped/CMakeLists.txt
@@ -18,6 +18,7 @@ add_library(quadruped
     src/control_mode_fsm.cpp
     src/control_mode/fixed_stand_mode.cpp
     src/control_mode/lying_down_mode.cpp
+    src/control_mode/swing_test_mode.cpp
     src/control_mode/free_stand_mode.cpp
     src/control_mode/move_base_mode.cpp
     src/control_mode/passive_mode.cpp
