--- a/src/planning/sampling/CMakeLists.txt
+++ b/src/planning/sampling/CMakeLists.txt
@@ -8,7 +8,7 @@ set(SAMPLING_LIB_SRC
 )
 add_library(sampling ${SAMPLING_LIB_SRC})
 target_link_libraries(sampling PUBLIC graph geometry spatial Eigen3::Eigen)
-if (ENABLE_TARGET_DESKTOP)
+if (ENABLE_VISUALIZATION)
   target_link_libraries(sampling PUBLIC cvdraw)
 endif ()
 target_include_directories(sampling PUBLIC
