--- a/src/platform/quadruped/test/unit_test/CMakeLists.txt
+++ b/src/platform/quadruped/test/unit_test/CMakeLists.txt
@@ -1,7 +1,8 @@
 # add unit test
 add_executable(utest_quadruped
     utest_unitree_leg.cpp
-    utest_config_loader.cpp)
+#    utest_config_loader.cpp
+)
 target_link_libraries(utest_quadruped quadruped gtest gmock gtest_main)
 
 gtest_discover_tests(utest_quadruped)
