quadruped: added free_stand mode

--- a/src/platform/quadruped/CMakeLists.txt
+++ b/src/platform/quadruped/CMakeLists.txt
@@ -8,6 +8,7 @@ add_library(quadruped
     # common
     src/config_loader.cpp
     src/utils.cpp
+    src/matrix_helper.cpp
     # event handler
     src/event_handler/hid_event_handler.cpp
     # model
