--- a/src/utilities/CMakeLists.txt
+++ b/src/utilities/CMakeLists.txt
@@ -4,5 +4,7 @@ add_subdirectory(file_io)
 add_subdirectory(logging)
 add_subdirectory(time)
 
+add_subdirectory(math_utils)
+
 add_library(utilities INTERFACE)
 target_link_libraries(utilities INTERFACE file_io logging time)
