repo: restructured modules in src

--- a/src/common/math_utils/test/CMakeLists.txt
+++ b/src/common/math_utils/test/CMakeLists.txt
@@ -1,9 +1,9 @@
 # add unit test
 add_executable(utest_fileio
     utest_fileio.cpp)
-target_link_libraries(utest_fileio file_io gtest gmock gtest_main)
+target_link_libraries(utest_fileio math_utils gtest gmock gtest_main)
  
 gtest_discover_tests(utest_fileio)
-add_test(NAME utilities::file_io COMMAND utest_fileio)
+add_test(NAME utilities::math_utils COMMAND utest_fileio)
 
 add_subdirectory(devel)
