map_processing: more experiments

--- a/src/mapping/map_processing/CMakeLists.txt
+++ b/src/mapping/map_processing/CMakeLists.txt
@@ -1,5 +1,6 @@
 find_package(OpenCV REQUIRED)
 find_package(PCL REQUIRED)
+find_package(Eigen3 REQUIRED NO_MODULE)
 
 include_directories(${PCL_INCLUDE_DIRS})
 link_directories(${PCL_LIBRARY_DIRS})
@@ -9,14 +10,16 @@ add_definitions(${PCL_DEFINITIONS})
 add_library(map_processing
     src/pgm_map.cpp
     src/point_cloud_processor.cpp
-    src/trajectory_loader.cpp
+    src/trajectory_processor.cpp
 )
 target_link_libraries(map_processing PUBLIC
     interface
     pnm
+    rapidcsv
     math_utils
     logging
     cvdraw
+    Eigen3::Eigen
     ${OpenCV_LIBS}
     ${PCL_LIBRARIES})
 target_compile_definitions(map_processing PUBLIC ENABLE_VISUAL)
