--- a/src/mapping/map_processing/test/CMakeLists.txt
+++ b/src/mapping/map_processing/test/CMakeLists.txt
@@ -5,6 +5,9 @@ if (ENABLE_VISUALIZATION)
   add_executable(test_pc_processor test_pc_processor.cpp)
   target_link_libraries(test_pc_processor map_processing)
 
-  add_executable(test_trajectory_loader test_trajectory_loader.cpp)
-  target_link_libraries(test_trajectory_loader map_processing)
+  add_executable(test_traj_processor test_traj_processor.cpp)
+  target_link_libraries(test_traj_processor map_processing)
+
+  add_executable(test_occupancy_map test_occupancy_map.cpp)
+  target_link_libraries(test_occupancy_map map_processing)
 endif ()
