--- a/.gitmodules
+++ b/.gitmodules
@@ -1,28 +1,25 @@
-[submodule "extern/googletest"]
-	path = third_party/googletest
-	url = https://github.com/google/googletest.git
-[submodule "extern/spdlog"]
-	path = third_party/spdlog
-	url = https://github.com/rxdu/spdlog.git
-[submodule "extern/rapidcsv"]
-	path = third_party/rapidcsv
-	url = https://github.com/rxdu/rapidcsv.git
-[submodule "extern/stopwatch"]
-	path = third_party/stopwatch
-	url = https://github.com/rxdu/stopwatch.git
 [submodule "src/planning/graph"]
 	path = src/planning/graph
 	url = https://github.com/rxdu/libgraph.git
-[submodule "src/visualization/imcore/imgui"]
-	path = src/visualization/imcore/imgui
-	url = https://github.com/ocornut/imgui.git
-[submodule "src/visualization/imcore/implot"]
-	path = src/visualization/imcore/implot
-	url = https://github.com/epezent/implot.git
 [submodule "src/ipc/ros2_idl"]
 	path = src/common/ipc/ros2_idl
 	url = https://github.com/rxdu/ros2_idl.git
-[submodule "extern/quadprog++"]
+[submodule "src/quickviz"]
+	path = src/quickviz
+	url = https://github.com/rxdu/quickviz.git
+[submodule "third_party/googletest"]
+	path = third_party/googletest
+	url = https://github.com/google/googletest.git
+[submodule "third_party/spdlog"]
+	path = third_party/spdlog
+	url = https://github.com/rxdu/spdlog.git
+[submodule "third_party/rapidcsv"]
+	path = third_party/rapidcsv
+	url = https://github.com/rxdu/rapidcsv.git
+[submodule "third_party/stopwatch"]
+	path = third_party/stopwatch
+	url = https://github.com/rxdu/stopwatch.git
+[submodule "third_party/quadprog++"]
 	path = third_party/quadprog++
 	url = https://github.com/rxdu/QuadProgpp.git
 [submodule "third_party/pnm"]
