--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -12,5 +12,7 @@ add_subdirectory(control)
 add_subdirectory(planning)
 
 if (ENABLE_VISUALIZATION)
+  option(QUICKVIZ_DEV_MODE "Build quickviz in dev mode" ON)
+  option(BUILD_QUICKVIZ_APP "Build quickviz application" ON)
   add_subdirectory(quickviz)
 endif ()
