--- a/src/driver/CMakeLists.txt
+++ b/src/driver/CMakeLists.txt
@@ -3,5 +3,6 @@ add_subdirectory(modbus_rtu)
 
 add_subdirectory(motor_akelc)
 add_subdirectory(motor_vesc)
+add_subdirectory(motor_waveshare)
 add_subdirectory(sensor_imu)
 add_subdirectory(input_hid)
