--- a/src/driver/motor_waveshare/test/CMakeLists.txt
+++ b/src/driver/motor_waveshare/test/CMakeLists.txt
@@ -1,2 +1,2 @@
-#add_executable(test_akelc_modbus test_akelc_modbus.cpp)
-#target_link_libraries(test_akelc_modbus motor_akelc)
+add_executable(test_ddsm210 test_ddsm210.cpp)
+target_link_libraries(test_ddsm210 motor_waveshare)
