saved work on waveshare driver

--- a/src/driver/motor_waveshare/CMakeLists.txt
+++ b/src/driver/motor_waveshare/CMakeLists.txt
@@ -1,6 +1,9 @@
 
 add_library(motor_waveshare STATIC
-    src/ddsm_210.cpp)
+    src/ddsm_210.cpp
+    src/servo/SMS_STS.cpp
+    src/servo/SCS.cpp
+    src/servo/SCSerial.cpp)
 target_link_libraries(motor_waveshare PUBLIC interface logging async_port)
 if (AKELC_WITH_MODBUS)
   target_compile_definitions(motor_waveshare PRIVATE AKELC_WITH_MODBUS)
@@ -8,7 +11,7 @@ endif ()
 target_include_directories(motor_waveshare PUBLIC
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
     $<INSTALL_INTERFACE:include>
-    PRIVATE src)
+    PRIVATE src src/servo)
 
 if (BUILD_APPS)
   add_subdirectory(app)
