--- a/src/driver/motor_waveshare/test/CMakeLists.txt
+++ b/src/driver/motor_waveshare/test/CMakeLists.txt
@@ -11,3 +11,10 @@ target_include_directories(test_servo_ping PRIVATE ../src/servo)
 add_executable(test_servo_write_pos ./examples/SMS_STS/WritePos/WritePos.cpp)
 target_link_libraries(test_servo_write_pos motor_waveshare)
 target_include_directories(test_servo_write_pos PRIVATE ../src/servo)
+
+add_executable(test_servo_feedback ./examples/SMS_STS/FeedBack/FeedBack.cpp)
+target_link_libraries(test_servo_feedback motor_waveshare)
+target_include_directories(test_servo_feedback PRIVATE ../src/servo)
+
+add_executable(test_sms_sts ./test_sms_sts.cpp)
+target_link_libraries(test_sms_sts motor_waveshare)
