waveshare: tested 4 servos/motors on the robot

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,6 +34,8 @@ endif ()
 
 if (ENABLE_VISUALIZATION)
   message(STATUS "Enable visualization targets")
+else ()
+  message(STATUS "Disable visualization targets")
 endif ()
 
 ## Generate symbols for IDE indexer
