--- a/src/control/robot_base/test/CMakeLists.txt
+++ b/src/control/robot_base/test/CMakeLists.txt
@@ -1,2 +1,7 @@
 add_executable(test_swerve_drive_robot test_swerve_drive_robot.cpp)
-target_link_libraries(test_swerve_drive_robot PRIVATE robot_base)
+target_link_libraries(test_swerve_drive_robot PRIVATE robot_base motor_waveshare)
+
+if (TARGET motor_akelc AND TARGET input_hid)
+  add_executable(test_differential_drive_robot test_differential_drive_robot.cpp)
+  target_link_libraries(test_differential_drive_robot PRIVATE robot_base motor_akelc input_hid)
+endif ()
