--- a/src/platform/swervebot/CMakeLists.txt
+++ b/src/platform/swervebot/CMakeLists.txt
@@ -1,14 +1,20 @@
 ## Dependency libraries
 find_package(Eigen3 REQUIRED NO_MODULE)
+find_package(yaml-cpp REQUIRED)
 
 ## Add libraries
-add_library(robot_base
-    src/speed_actuator_group.cpp
-    src/position_actuator_group.cpp
-    src/differential_drive_robot.cpp
-    src/swerve_drive_robot.cpp)
-target_link_libraries(robot_base PUBLIC interface logging Eigen3::Eigen)
-target_include_directories(robot_base PUBLIC
+add_library(swervebot
+    # common
+    src/ws_sbot_base.cpp)
+target_link_libraries(swervebot PUBLIC
+    interface
+    robot_base
+    fsm
+    input_hid
+    Eigen3::Eigen
+    yaml-cpp
+    PRIVATE logging)
+target_include_directories(swervebot PUBLIC
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
     $<INSTALL_INTERFACE:include>
     PRIVATE src)
@@ -17,8 +23,10 @@ if (BUILD_TESTS)
   add_subdirectory(test)
 endif ()
 
+add_subdirectory(app)
+
 ## installation configuration
-install(TARGETS robot_base
+install(TARGETS swervebot
     EXPORT xmotionTargets
     LIBRARY DESTINATION lib
     ARCHIVE DESTINATION lib
