--- a/src/platform/CMakeLists.txt
+++ b/src/platform/CMakeLists.txt
@@ -2,6 +2,10 @@ if (ENABLE_TBOT_APP)
   add_subdirectory(tbot)
 endif ()
 
+if (ENABLE_SWERVEBOT_APP)
+  add_subdirectory(swervebot)
+endif ()
+
 if (ENABLE_QUADRUPED_APP)
   add_subdirectory(quadruped)
 endif ()
