--- a/src/control/robot_base/CMakeLists.txt
+++ b/src/control/robot_base/CMakeLists.txt
@@ -6,7 +6,8 @@ add_library(robot_base
     src/speed_actuator_group.cpp
     src/position_actuator_group.cpp
     src/differential_drive_robot.cpp
-    src/swerve_drive_robot.cpp)
+    src/swerve_drive_robot.cpp
+    src/swerve_drive_kinematics.cpp)
 target_link_libraries(robot_base PUBLIC interface logging Eigen3::Eigen)
 target_include_directories(robot_base PUBLIC
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
